--- a/pages/amplificadores.html
+++ b/pages/amplificadores.html
@@ -188,7 +188,7 @@
 
         <div class="footerAmps">
 
-                <div>
+                <div class="logoFooter">
                     <a href="../index.html"><img src="../Img/jazz-icon-3.png" alt="Home"></a>
      
                  </div>
