--- a/pages/bajos.html
+++ b/pages/bajos.html
@@ -157,7 +157,7 @@
       
         <div class="footerBajos">
 
-                <div>
+                <div class="logoFooter">
                     <a href="../index.html"><img src="../Img/jazz-icon-3.png" alt="Home"></a>
      
                  </div>
