--- a/pages/consignaciones.html
+++ b/pages/consignaciones.html
@@ -119,7 +119,7 @@
         <div class="footerConsignaciones">
 
 
-            <div>
+            <div class="logoFooter">
                     <a href="../index.html"><img src="../Img/jazz-icon-3.png" alt="Home"></a>
 
             </div>
@@ -152,7 +152,7 @@
                   
         </div>
 
-        <div class="redesElectrica">
+        <div class="redes">
 
             <a href="https://www.facebook.com/CarterVintage" target="_blank"><img src="../Img/Facebook logo.png"
                     alt="facebook"> </a>
