--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -243,11 +243,12 @@
     <footer id="irAlFooter">
 
 
+        
+        <h3>Nuestras oficinas se encuentran en Caplital federal y solamente atendemos con cita previa</h3>
 
-        <p>Nuestras oficinas se encuentran en Caplital federal y solamente atendemos con cita previa</p>
 
+        
 
-        <div>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13135.743815725169!2d-58.3851405!3d-34.605781!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2c18ef168272f8ed!2sMusica%20y%20Sonido%20Custom%20Shop!5e0!3m2!1ses!2sar!4v1675098895435!5m2!1ses!2sar"
             width="90%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
@@ -257,7 +258,7 @@
 
         <div class="footerContacto">
 
-            <div>
+            <div class="logoFooter">
                <a href="../index.html"><img src="../Img/jazz-icon-3.png" alt="Home"></a>
 
             </div>
@@ -292,7 +293,7 @@
 
         </div>
 
-        <div class="redes" >
+        <div class="redesContacto" >
 
             <a href="https://www.facebook.com/CarterVintage" target="_blank"><img src="../Img/Facebook logo.png"
                     alt="facebook"> <a>
