--- a/pages/guitarras-acusticas.html
+++ b/pages/guitarras-acusticas.html
@@ -207,7 +207,7 @@
 
         <div class="footerGuitarrasA">
 
-            <div>
+            <div class="logoFooter">
                 <div>
                     <a href="../index.html"><img src="../Img/jazz-icon-3.png" alt="Home"></a>
      
