--- a/pages/guitarras-electricas.html
+++ b/pages/guitarras-electricas.html
@@ -212,7 +212,7 @@
 
         <div class="footerGuitarrasE">
 
-            <div>
+            <div class="logoFooter">
 
                 <a href="../index.html"><img src="../Img/jazz-icon-3.png" alt="Home"></a>
 
@@ -246,7 +246,7 @@
             
         </div>
 
-        <div class="redesElectrica">
+        <div class="redes">
 
             <a href="https://www.facebook.com/CarterVintage" target="_blank"><img src="../Img/Facebook logo.png"
                     alt="facebook"> </a>
