--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <div class="row gx-4 gy-4">
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-12">
 
                     <div class="item1">
 
@@ -127,7 +127,7 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-12">
 
                     <div class="item2">
 
@@ -146,7 +146,7 @@
 
 
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-12">
 
                     <div class="item3">
 
@@ -163,7 +163,7 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-12">
 
                     <div class="item4">
 
@@ -180,7 +180,7 @@
 
                 </div>
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-12">
 
                     <div class="item5">
 
@@ -196,7 +196,7 @@
 
                 </div>
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-12">
 
                     <div class="item6">
 
@@ -293,7 +293,7 @@
 
         <div class="footerIndex">
 
-            <div>
+            <div class="logoFooter">
                 <a href="./index.html"><img src="./Img/jazz-icon-3.png" alt="Home"></a>
 
             </div>
