--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -296,7 +296,7 @@
         <div class="redesContacto" >
 
             <a href="https://www.facebook.com/CarterVintage" target="_blank"><img src="../Img/Facebook logo.png"
-                    alt="facebook"> <a>
+                    alt="facebook"> </a>
                     <a href="https://www.instagram.com/cartervintageguitars/" target="_blank"><img
                             src="../Img/Instagram-Logo.png" alt="instagram"></a>
 
